ecmascript/parser/tests/test262-error-references/fail/c177366cb56cf1bc.js.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/test262-parser/fail/c177366cb56cf1bc.js:1:3
  |
1 | a class;
  |   ^^^^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/test262-parser/fail/c177366cb56cf1bc.js:1:1
  |
1 | a class;
  | ^

